styles/list.module.css
.skeleton_row{
  width: 250px;
  margin: .3rem 0;
}
.list {
  row-gap: 1rem !important;
}
.addBtn {
  width: 4.5rem;
  height: 4.5rem;
  position: absolute;
  bottom: calc(100vh/20);
  right: calc(100vw/20);
}
.addBtn svg {
 font-size: 2rem;

}

